fixed button focus styling and added some spacing on intro page

--- a/client/src/styles/components/button.scss
+++ b/client/src/styles/components/button.scss
@@ -9,4 +9,8 @@
   min-width: 30%;
   border-radius: 2rem;
   margin-top: 3rem;
+
+  &:focus {
+    outline: none;
+  }
 }
