--- a/client/src/styles/components/intro-result.module.scss
+++ b/client/src/styles/components/intro-result.module.scss
@@ -62,6 +62,10 @@
   border-radius: 2rem;
   margin-bottom: 1rem;
   margin-top: 2rem;
+
+  &:focus {
+    outline: none;
+  }
 }
 
 // Result Page
@@ -106,4 +110,3 @@
   height: 30rem;
   margin-top: 2rem;
 }
-
